<resources>
	<string name="app_name">Expense Money 88</string>
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="error_blank_name">Name cannot be blank.</string>
	<string name="error_blank_start_date">Starting Date cannot be blank.</string>
	<string name="error_empty_list">Empty list.</string>
	<string name="error_no_info">No Information</string>
	<string name="error_not_found">Not Found</string>
	<string name="label_backup">Backup</string>
	<string name="label_backup_firestore">Firestore Backup</string>
	<string name="label_cancel">Cancel</string>
	<string name="label_confirm">Confirm</string>
	<string name="label_confirmation">Confirmation</string>
	<string name="label_content">Content</string>
	<string name="label_date">Date</string>
	<string name="label_name">Name</string>
	<string name="label_register">Register</string>
	<string name="label_reset_database">Reset Database</string>
	<string name="label_search">Search</string>
	<string name="label_setting">Setting</string>
	<string name="label_start_date">Starting Date</string>
	<string name="label_tenant">Tenant</string>
	<string name="label_time">Time</string>
	<string name="label_type">Type</string>
	<string name="label_update">Update</string>
	<string name="menu_in_main_about">About</string>
	<string name="menu_in_main_setting">Setting</string>

	<string name="menu_in_main_list">List</string>
	<string name="menu_in_main_register">Register</string>

	<string name="notification_backup_fail">Not backup successfully.</string>
	<string name="notification_backup_success">Backup successfully.</string>
	<string name="notification_create_fail">Not created successfully.</string>
	<string name="notification_create_success">Created successfully.</string>
	<string name="notification_delete_confirm">Are you sure to delete this?.</string>
	<string name="notification_delete_fail">Not deleted successfully.</string>
	<string name="notification_delete_success">Deleted successfully.</string>
	<string name="notification_reset_database_success">Reset database successfully.</string>
	<string name="notification_update_fail">Not updated successfully.</string>
	<string name="notification_update_success">Updated successfully.</string>
	<string name="about_us_EM88">Expense Money 88</string>
	<string name="about_us_name">This project made with love and effort for Mobile Application Coursework ❤</string>
	<string name="about_us_copyright">Copyright © 2022 by Naovu a.k.a HuuNghia</string>
	<string name="about_us_plhone">Student ID: 001245121</string>
	<string name="about_us_email">Email: vuhuunghia2001@gmail.com</string>
	<string name="about_us_disclaimer">This sample includes only basic features, no validation and no error handling.</string>
	<string name="about_us_logo">Expense Money 88</string>

	<string-array name="expense_type">
		<item>Travel</item>
		<item>Food</item>
		<item>Repairs</item>
		<item>Supplies</item>
		<item>Heath care</item>
		<item>Transport</item>
	</string-array>

	<string-array name="expense_currency">
		<item>USD</item>
		<item>VND</item>
	</string-array>

	<!-- preference keys -->
	<string name="preference_backup_key">back_up_option</string>
	<string name="preference_reset_key">reset_option</string>
	<string name="preference_dark_mode_key">dark_mode_option</string>
	<string name="preference_about_us_key">about_us_option</string>
	<string name="preference_term_key">term_option</string>

</resources>
