<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
	<PreferenceCategory
		app:iconSpaceReserved="false"
		app:title="Management Data">
		<Preference
			app:icon="@drawable/ic_backup_rounded__2"
			app:key="@string/preference_backup_key"
			app:summary="Make a spare copy of data to your Firestore"
			app:tint="@color/bg_dark"
			app:title="Back Up" />
		<Preference
			app:icon="@drawable/ic_power_reset"
			app:iconSpaceReserved="false"
			app:key="@string/preference_reset_key"
			app:summary="Reset the local database"
			app:title="Reset Data" />
	</PreferenceCategory>

	<PreferenceCategory
		app:iconSpaceReserved="false"
		app:title="Theme">
		<SwitchPreference
			app:icon="@drawable/dark_mode_rounded__1_"
			app:key="@string/preference_dark_mode_key"
			app:summary="Display setting for user interfaces."
			app:title="Dark mode" />
	</PreferenceCategory>


	<PreferenceCategory
	>
		<Preference

			app:iconSpaceReserved="false"
			app:key="@string/preference_about_us_key"
			app:title="About EM88" />

	</PreferenceCategory>
</PreferenceScreen>
