<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.AboutUsFragment">

	<TextView
		android:id="@+id/fmAboutUsName"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="25dp"
		android:fontFamily="@font/poppins_medium"
		android:text="@string/about_us_EM88"
		android:textAlignment="center"
		android:textSize="35sp"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.498"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/fmAboutUsDescription"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:padding="10dp"
		android:text="@string/about_us_name"
		android:textAlignment="center"
		android:textSize="20sp"
		app:layout_constraintEnd_toEndOf="@+id/fmAboutUsName"
		app:layout_constraintStart_toStartOf="@+id/fmAboutUsName"
		app:layout_constraintTop_toBottomOf="@+id/fmAboutUsName" />


	<TextView
		android:id="@+id/textView3"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginBottom="5dp"
		android:text="@string/about_us_plhone"
		android:textAlignment="center"
		android:textSize="15sp"
		android:textStyle="italic"
		app:layout_constraintBottom_toTopOf="@+id/textView4"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent" />

	<TextView
		android:id="@+id/textView4"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginBottom="50dp"
		android:text="@string/about_us_email"
		android:textAlignment="center"
		android:textSize="15sp"
		android:textStyle="italic"
		app:layout_constraintBottom_toTopOf="@+id/textView5"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent" />

	<TextView
		android:id="@+id/textView5"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginBottom="25dp"
		android:paddingStart="30dp"
		android:paddingEnd="30dp"
		android:text="@string/about_us_copyright"
		android:textAlignment="center"
		android:textSize="15sp"
		android:textStyle="italic"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:lineHeight="20sp" />

</androidx.constraintlayout.widget.ConstraintLayout>
